# django-graphql-cookiecutter

./: .gitignore  .pre-commit-config.yaml  .sample.env  LICENSE  README.md  pyproject.toml
backend/: graphql.py  settings.py  urls.py
backend/contrib/: apps.py  events.py  socket.py  tasks.py
backend/contrib/management/commands/: frontend_export.py  seed_db.py  sio_server.py
backend/core/: admin.py  auth_backend.py  choices.py  models.py  mutations.py  node.py  queries.py  sms.py  tasks.py  types.py
backend/core/migrations/: 0001_initial.py
