[tool.poetry]
name = "backend"
version = "1.0.0"
description = "A Django, GraphQL, Relay cookiecutter."
authors = ["Mohammed Rishad <mohammedrishad.vk@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.7"
graphene-django = "^2.15.0"
django-cors-headers = "^3.8.0"
psycopg2-binary = "^2.9.1"
django-extensions = "^3.1.3"
orm-choices = "^1.0.0"
whitenoise = "^5.3.0"
celery = "^5.1.2"
django-graphql-jwt = "^0.3.4"
boto3 = "^1.18.49"
eventlet = "^0.32.0"
python-socketio = "^5.4.0"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]
neovim = "^0.3.1"
ipython = "^7.28.0"
ipdb = "^0.13.9"
flake8 = "^3.9.2"
isort = "^5.9.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
